packages/markdown-core/elements/autolink_scanners.c
/* Generated by re2c 4.6 */
#include "autolink_scanners.h"

/* Shared byte-scanner configuration and lexical primitives. */







bufsize_t scan_scheme(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '@') goto yy1;
	if (yych <= 'Z') goto yy3;
	if (yych <= '`') goto yy1;
	if (yych <= 'z') goto yy3;
yy1:
	++p;
yy2:
	{ return 0; }
yy3:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '/') {
		if (yych <= '+') {
			if (yych <= '*') goto yy2;
		} else {
			if (yych <= ',') goto yy2;
			if (yych >= '/') goto yy2;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '9') goto yy4;
			if (yych <= '@') goto yy2;
		} else {
			if (yych <= '`') goto yy2;
			if (yych >= '{') goto yy2;
		}
	}
yy4:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych == '+') goto yy6;
		} else {
			if (yych != '/') goto yy6;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych >= 'A') goto yy6;
		} else {
			if (yych <= '`') goto yy5;
			if (yych <= 'z') goto yy6;
		}
	}
yy5:
	p = marker;
	goto yy2;
yy6:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych == '+') goto yy8;
			goto yy5;
		} else {
			if (yych == '/') goto yy5;
			goto yy8;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
			goto yy8;
		} else {
			if (yych <= '`') goto yy5;
			if (yych <= 'z') goto yy8;
			goto yy5;
		}
	}
yy7:
	++p;
	{ return (bufsize_t)(p - start); }
yy8:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy5;
		} else {
			if (yych == '/') goto yy5;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy7;
			if (yych <= '@') goto yy5;
		} else {
			if (yych <= '`') goto yy5;
			if (yych >= '{') goto yy5;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == ':') goto yy7;
	goto yy5;
}

}

bufsize_t scan_autolink_uri(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;

{
	unsigned char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128,   0, 128,   0, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128,   0,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128,
		128, 128, 128, 128, 128, 128, 128, 128
	};
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '@') goto yy10;
	if (yych <= 'Z') goto yy12;
	if (yych <= '`') goto yy10;
	if (yych <= 'z') goto yy12;
yy10:
	++p;
yy11:
	{ return 0; }
yy12:
	++p;
	marker = p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '/') {
		if (yych <= '+') {
			if (yych <= '*') goto yy11;
		} else {
			if (yych <= ',') goto yy11;
			if (yych >= '/') goto yy11;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '9') goto yy13;
			if (yych <= '@') goto yy11;
		} else {
			if (yych <= '`') goto yy11;
			if (yych >= '{') goto yy11;
		}
	}
yy13:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych == '+') goto yy15;
		} else {
			if (yych != '/') goto yy15;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych >= 'A') goto yy15;
		} else {
			if (yych <= '`') goto yy14;
			if (yych <= 'z') goto yy15;
		}
	}
yy14:
	p = marker;
	goto yy11;
yy15:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych == '+') goto yy17;
			goto yy14;
		} else {
			if (yych == '/') goto yy14;
			goto yy17;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
			goto yy17;
		} else {
			if (yych <= '`') goto yy14;
			if (yych <= 'z') goto yy17;
			goto yy14;
		}
	}
yy16:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yybm[0+yych] & 128) goto yy16;
	if (yych <= '<') goto yy14;
	if (yych <= '>') goto yy18;
	goto yy14;
yy17:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych == '+') goto yy19;
			goto yy14;
		} else {
			if (yych == '/') goto yy14;
			goto yy19;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
			goto yy19;
		} else {
			if (yych <= '`') goto yy14;
			if (yych <= 'z') goto yy19;
			goto yy14;
		}
	}
yy18:
	++p;
	{ return (bufsize_t)(p - start); }
yy19:
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych <= '9') {
		if (yych <= ',') {
			if (yych != '+') goto yy14;
		} else {
			if (yych == '/') goto yy14;
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= ':') goto yy16;
			if (yych <= '@') goto yy14;
		} else {
			if (yych <= '`') goto yy14;
			if (yych >= '{') goto yy14;
		}
	}
	++p;
	yych = (p < remaining ? input[p] : 0);
	if (yych == ':') goto yy16;
	goto yy14;
}

}

bufsize_t scan_autolink_email(const unsigned char *data, bufsize_t length, bufsize_t offset)
{
  if (!data || offset < 0 || offset >= length) {
    return 0;
  }
  const unsigned char *input = data + offset;
  size_t p = 0, remaining = (size_t)(length - offset);
  size_t marker = 0;
  size_t start = p;
